refactor(infra): refactor CloudWatchMetricsService with constants and credentials