@@ -1,6 +1,7 @@
 package com.kra.api.infrastructure.cloudwatch;
 
 import org.springframework.stereotype.Service;
+import software.amazon.awssdk.auth.credentials.DefaultCredentialsProvider;
 import software.amazon.awssdk.regions.Region;
 import software.amazon.awssdk.services.cloudwatch.CloudWatchClient;
 import software.amazon.awssdk.services.cloudwatch.model.*;
@@ -11,17 +12,22 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 public class CloudWatchMetricsService {
 
-    private final CloudWatchClient cloudWatchClient;
     private static final String PROJECT_NAME = "kra";
+    private static final String LAMBDA_NAMESPACE = "AWS/Lambda";
+    private static final String FUNCTION_NAME_DIM = "FunctionName";
+    private static final String THUMBNAIL_GENERATOR = PROJECT_NAME + "-thumbnail-generator";
+    private static final String EMAIL_NOTIFIER = PROJECT_NAME + "-email-notifier";
+
+    private final CloudWatchClient cloudWatchClient;
 
     public CloudWatchMetricsService() {
         this.cloudWatchClient = CloudWatchClient.builder()
                 .region(Region.EU_WEST_1)
+                .credentialsProvider(DefaultCredentialsProvider.create())
                 .build();
     }
 
@@ -30,17 +36,15 @@ public class CloudWatchMetricsService {
         Instant startTime = endTime.minus(24, ChronoUnit.HOURS);
 
         List<MetricDataQuery> queries = new ArrayList<>();
-        
-        // Lambdas
-        queries.add(createQuery("thumb_invocations", "AWS/Lambda", "Invocations", "FunctionName", PROJECT_NAME + "-thumbnail-generator", "Sum"));
-        queries.add(createQuery("thumb_errors", "AWS/Lambda", "Errors", "FunctionName", PROJECT_NAME + "-thumbnail-generator", "Sum"));
-        queries.add(createQuery("thumb_duration", "AWS/Lambda", "Duration", "FunctionName", PROJECT_NAME + "-thumbnail-generator", "Average"));
-        
-        queries.add(createQuery("email_invocations", "AWS/Lambda", "Invocations", "FunctionName", PROJECT_NAME + "-email-notifier", "Sum"));
-        queries.add(createQuery("email_errors", "AWS/Lambda", "Errors", "FunctionName", PROJECT_NAME + "-email-notifier", "Sum"));
-        queries.add(createQuery("email_duration", "AWS/Lambda", "Duration", "FunctionName", PROJECT_NAME + "-email-notifier", "Average"));
-        
-        // DynamoDB
+
+        queries.add(createQuery("thumb_invocations", LAMBDA_NAMESPACE, "Invocations", FUNCTION_NAME_DIM, THUMBNAIL_GENERATOR, "Sum"));
+        queries.add(createQuery("thumb_errors", LAMBDA_NAMESPACE, "Errors", FUNCTION_NAME_DIM, THUMBNAIL_GENERATOR, "Sum"));
+        queries.add(createQuery("thumb_duration", LAMBDA_NAMESPACE, "Duration", FUNCTION_NAME_DIM, THUMBNAIL_GENERATOR, "Average"));
+
+        queries.add(createQuery("email_invocations", LAMBDA_NAMESPACE, "Invocations", FUNCTION_NAME_DIM, EMAIL_NOTIFIER, "Sum"));
+        queries.add(createQuery("email_errors", LAMBDA_NAMESPACE, "Errors", FUNCTION_NAME_DIM, EMAIL_NOTIFIER, "Sum"));
+        queries.add(createQuery("email_duration", LAMBDA_NAMESPACE, "Duration", FUNCTION_NAME_DIM, EMAIL_NOTIFIER, "Average"));
+
         queries.add(createQuery("db_errors", "AWS/DynamoDB", "SystemErrors", "TableName", PROJECT_NAME + "-table", "Sum"));
         queries.add(createQuery("db_throttles", "AWS/DynamoDB", "ThrottledRequests", "TableName", PROJECT_NAME + "-table", "Sum"));
 
@@ -55,7 +59,7 @@ public class CloudWatchMetricsService {
         Map<String, Object> results = new HashMap<>();
         for (MetricDataResult result : response.metricDataResults()) {
             Map<String, Object> data = new HashMap<>();
-            data.put("timestamps", result.timestamps().stream().map(Instant::toString).collect(Collectors.toList()));
+            data.put("timestamps", result.timestamps().stream().map(Instant::toString).toList());
             data.put("values", result.values());
             results.put(result.id(), data);
         }
@@ -66,15 +70,13 @@ public class CloudWatchMetricsService {
     private MetricDataQuery createQuery(String id, String namespace, String metricName, String dimName, String dimValue, String stat) {
         return MetricDataQuery.builder()
                 .id(id)
-                .metricStat(MetricStat.builder()
-                        .metric(Metric.builder()
+                .metricStat(ms -> ms
+                        .metric(m -> m
                                 .namespace(namespace)
                                 .metricName(metricName)
-                                .dimensions(Dimension.builder().name(dimName).value(dimValue).build())
-                                .build())
+                                .dimensions(Dimension.builder().name(dimName).value(dimValue).build()))
                         .period(3600)
-                        .stat(stat)
-                        .build())
+                        .stat(stat))
                 .returnData(true)
                 .build();
     }
